--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: sh build.sh go-dev
+  flutter:
+    name: flutter
+    runs-on: ubuntu-latest
+    needs:
+      - protogen
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build
+        run: sh build.sh flutter 1.17.1
   node:
     name: node
     runs-on: ubuntu-latest
