--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.cn-shanghai.aliyuncs.com/vsi-open/protogen AS builder
+FROM izhaohucom/protogen AS builder
 
 FROM node:12
 
@@ -6,7 +6,7 @@ COPY --from=builder \
     /usr/local/bin/protoc \
     /usr/local/bin/
 
-ARG PROTOC_GEN_GRPC_WEB_VERSION=1.0.6
+ARG PROTOC_GEN_GRPC_WEB_VERSION=1.0.7
 
 RUN wget https://github.com/grpc/grpc-web/releases/download/$PROTOC_GEN_GRPC_WEB_VERSION/protoc-gen-grpc-web-$PROTOC_GEN_GRPC_WEB_VERSION-linux-x86_64 -qO /usr/local/bin/protoc-gen-grpc-web \
     && chmod +x /usr/local/bin/protoc-gen-grpc-web \
