--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: sh build.sh flutter 1.17.1
+        run: sh build.sh flutter
   node:
     name: node
     runs-on: ubuntu-latest
