--- a/ci-mysql/Dockerfile
+++ b/ci-mysql/Dockerfile
@@ -1,15 +1,15 @@
 FROM golang:1.15.0-alpine AS builder
 
-ENV \
-    CGO_ENABLED=0 \
-    GO111MODULE=on \
-    GOPROXY="https://goproxy.cn,direct"
+RUN apk add --no-cache build-base curl git make
 
-RUN apk add --no-cache git && go get -u github.com/libgo/migrate
+ENV CGO_ENABLED=0
 
-FROM mysql:5.7
+RUN cd /tmp \
+    && go get -u github.com/libgo/migrate
 
-RUN apt-get update && apt-get install -y git curl jq && rm -rf /var/lib/apt/lists/*
+FROM mysql:5.7.31
+
+RUN apt-get update && apt-get install -y --no-install-recommends git curl jq && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder \
     /go/bin/migrate \
