--- a/alpine-glibc-grpc/Dockerfile
+++ b/alpine-glibc-grpc/Dockerfile
@@ -1,5 +1,5 @@
 FROM izhaohucom/alpine-glibc
 
 RUN GRPC_HEALTH_PROBE_VERSION=v0.3.2 && \
-    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/$GRPC_HEALTH_PROBE_VERSION/grpc_health_probe-linux-amd64 && \
+    wget -qO /bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/$GRPC_HEALTH_PROBE_VERSION/grpc_health_probe-linux-amd64 && \
     chmod +x /bin/grpc_health_probe
