--- a/alpine-glibc/Dockerfile
+++ b/alpine-glibc/Dockerfile
@@ -2,7 +2,7 @@ FROM izhaohucom/alpine
 
 ENV LANG=C.UTF-8
 
-RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub \
+RUN wget -qO /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub \
     && ALPINE_GLIBC_PACKAGE_VERSION="2.32-r0" \
     && ALPINE_GLIBC_BASE_URL="https://github.com/sgerrand/alpine-pkg-glibc/releases/download" \
     && ALPINE_GLIBC_BASE_PACKAGE_FILENAME="glibc-$ALPINE_GLIBC_PACKAGE_VERSION.apk" \
