--- a/ci-mysql/Dockerfile
+++ b/ci-mysql/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.15.0-alpine AS builder
 
-RUN apk add --no-cache build-base curl git make
+RUN apk add --no-cache alpine-sdk
 
 ENV \
     CGO_ENABLED=0 \
@@ -11,7 +11,7 @@ RUN cd /tmp \
 
 FROM mysql:5.7.31
 
-RUN apt-get update && apt-get install -y --no-install-recommends git curl jq && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends git curl rsync jq && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder \
     /go/bin/migrate \
