--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -3,4 +3,4 @@ FROM alpine:3.12.0
 RUN sed -i 's|dl-cdn.alpinelinux.org|mirrors.aliyun.com|g' /etc/apk/repositories \
     && apk add --no-cache ca-certificates tzdata \
     && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone \
-    && rm -rf /var/cache/apk/* /tmp/*
+    && rm -rf /tmp/*
