--- a/ci-bot/Dockerfile
+++ b/ci-bot/Dockerfile
@@ -1,9 +1,9 @@
 FROM izhaohucom/alpine-glibc
 
-RUN apk add --no-cache curl git make openssh-client rsync jq
+RUN apk add --no-cache alpine-sdk openssh-client rsync jq
 
 RUN cd /tmp \
-    && curl -sSL https://download.docker.com/linux/static/stable/x86_64/docker-19.03.12.tgz | tar zxf - && mv docker/docker /usr/local/bin/docker \
-    && curl -sSL https://storage.googleapis.com/kubernetes-release/release/v1.18.2/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl \
+    && wget -qO- https://download.docker.com/linux/static/stable/x86_64/docker-19.03.12.tgz | tar zxf - && mv docker/docker /usr/local/bin/docker \
+    && wget -qO /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.18.2/bin/linux/amd64/kubectl && chmod +x /usr/local/bin/kubectl \
     && mkdir ~/.kube \
-    && rm -rf /tmp/* /var/cache/apk/*
+    && rm -rf /tmp/*
