--- a/ci-tidb/Dockerfile
+++ b/ci-tidb/Dockerfile
@@ -1,7 +1,5 @@
 FROM pingcap/tidb:v4.0.4
 
-ENV TZ='Asia/Shanghai'
-
-RUN cp /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone
 
 ENTRYPOINT ["/tidb-server", "-L", "warn"]
