--- a/flutter/Dockerfile
+++ b/flutter/Dockerfile
@@ -13,16 +13,16 @@ COPY --from=protogen \
 COPY \
     init.gradle \
     gradle.properties \
-    $HOME/.gradle/
+    /root/.gradle/
 
 ENV \
     PUB_HOSTED_URL=https://pub.flutter-io.cn \
     FLUTTER_STORAGE_BASE_URL=https://storage.flutter-io.cn \
-    PATH=$PATH:$HOME/.pub-cache/bin \
+    PATH=$PATH:/root/.pub-cache/bin \
     GRADLE_OPTS="-Dorg.gradle.parallel=true -Dorg.gradle.daemon=false"
 
 RUN sdkmanager "platforms;android-28" "build-tools;28.0.3" "platforms;android-29" "build-tools;29.0.3" 1>/dev/null \
-    && GRADLE_VERSION=6.1.1 && GRADLE_PATH=$HOME/.gradle/wrapper/dists/gradle-$GRADLE_VERSION-all/cfmwm155h49vnt3hynmlrsdst \
+    && GRADLE_VERSION=6.1.1 && GRADLE_PATH=/root/.gradle/wrapper/dists/gradle-$GRADLE_VERSION-all/cfmwm155h49vnt3hynmlrsdst \
     && mkdir -p $GRADLE_VERSION && cd $GRADLE_VERSION \
     && wget -q https://services.gradle.org/distributions/gradle-$GRADLE_VERSION-all.zip \
     && cd /tmp/protobuf-src && pub global activate protoc_plugin \
