--- a/flutter/Dockerfile
+++ b/flutter/Dockerfile
@@ -23,7 +23,7 @@ ENV \
 
 RUN sdkmanager "platforms;android-28" "build-tools;28.0.3" "platforms;android-29" "build-tools;29.0.3" 1>/dev/null \
     && GRADLE_VERSION=6.1.1 && GRADLE_PATH=/root/.gradle/wrapper/dists/gradle-$GRADLE_VERSION-all/cfmwm155h49vnt3hynmlrsdst \
-    && mkdir -p $GRADLE_VERSION && cd $GRADLE_VERSION \
+    && mkdir -p $GRADLE_PATH && cd $GRADLE_PATH \
     && wget -q https://services.gradle.org/distributions/gradle-$GRADLE_VERSION-all.zip \
     && cd /tmp/protobuf-src && pub global activate protoc_plugin \
     && rm -rf /tmp/*
