--- a/flutter/init.gradle
+++ b/flutter/init.gradle
@@ -1,24 +1,13 @@
 allprojects {
     repositories {
-        def ALIYUN_REPOSITORY_URL = 'https://maven.aliyun.com/nexus/content/groups/public'
-        def ALIYUN_JCENTER_URL = 'https://maven.aliyun.com/nexus/content/repositories/jcenter'
-        all {
-            ArtifactRepository repo ->
-                if (repo instanceof MavenArtifactRepository) {
-                    def url = repo.url.toString()
-                    if (url.startsWith('https://repo1.maven.org/maven2')) {
-                        project.logger.lifecycle "Repository ${repo.url} replaced by $ALIYUN_REPOSITORY_URL."
-                        remove repo
-                    }
-                    if (url.startsWith('https://jcenter.bintray.com/')) {
-                        project.logger.lifecycle "Repository ${repo.url} replaced by $ALIYUN_JCENTER_URL."
-                        remove repo
-                    }
-                }
-        }
-        maven {
-            url ALIYUN_REPOSITORY_URL
-            url ALIYUN_JCENTER_URL
-        }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+
+        mavenLocal()
+        google()
+        jcenter()
     }
 }
