--- a/flutter/Dockerfile
+++ b/flutter/Dockerfile
@@ -13,7 +13,6 @@ COPY --from=protogen \
 COPY \
     init.gradle \
     gradle.properties \
-    flutter.gradle.patch \
     /root/.gradle/
 
 ENV \
@@ -22,8 +21,7 @@ ENV \
     FLUTTER_STORAGE_BASE_URL=https://storage.flutter-io.cn \
     GRADLE_OPTS="-Dorg.gradle.parallel=true -Dorg.gradle.daemon=false"
 
-RUN patch $FLUTTER_HOME/packages/flutter_tools/gradle/flutter.gradle /root/.gradle/flutter.gradle.patch \
-    && sdkmanager "platforms;android-28" "build-tools;28.0.3" "platforms;android-29" "build-tools;29.0.3" 1>/dev/null \
+RUN sdkmanager "platforms;android-28" "build-tools;28.0.3" "platforms;android-29" "build-tools;29.0.3" 1>/dev/null \
     && GRADLE_VERSION=6.1.1 && GRADLE_PATH=/root/.gradle/wrapper/dists/gradle-$GRADLE_VERSION-all/cfmwm155h49vnt3hynmlrsdst \
     && mkdir -p $GRADLE_PATH && cd $GRADLE_PATH && wget -q https://services.gradle.org/distributions/gradle-$GRADLE_VERSION-all.zip \
     && cd /tmp/protobuf-src && pub global activate protoc_plugin \
