--- a/flutter/init.gradle
+++ b/flutter/init.gradle
@@ -2,6 +2,7 @@ allprojects {
     repositories {
         mavenLocal()
 
+        maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
