--- a/flutter/init.gradle
+++ b/flutter/init.gradle
@@ -1,10 +1,11 @@
 allprojects {
     repositories {
-        mavenLocal()
-
-        maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+
+        mavenLocal()
+        mavenCentral()
     }
 }
